# dapi

./: .gitignore  AUTHORS.md  CHANGELOG.md  README.md  _config.yml  _toc.yml  mkdocs.yml  myst.yml  pyproject.toml
.github/workflows/: build-test.yml  docs.yml  pypi.yml
dapi/: __init__.py  apps.py  auth.py  client.py  core.py  db.py  db_config.py  exceptions.py  files.py  jobs.py  launcher.py  projects.py  publications.py  systems.py
dapi/apps/: __init__.py  apps.py
dapi/auth/: __init__.py  auth.py
dapi/components/files/: __init__.py
dapi/components/jobs/: __init__.py  base_job_handler.py  mpm_job_handler.py  opensees_job_handler.py
dapi/db/: __init__.py  accessor.py  config.py  db.py
dapi/jobs/: __init__.py  dir.py  jobs.py
docs/: apps.md  authentication.md  dapi.html  database.md  dsjobs.html  examples.md  files.md  index.html  index.md  installation.md  jobs.md  projects.md  publications.md  quickstart.md  search.js  systems.md
docs-api/: apps.rst  auth.rst  client.rst  conf.py  database.rst  exceptions.rst  files.rst  index.rst  jobs.rst  launcher.rst  systems.rst
docs/api/: apps.md  auth.md  client.md  database.md  exceptions.md  files.md  index.md  jobs.md  launcher.md  systems.md
docs/dapi/: auth.html  db.html  dir.html  index.html  jobs.html
docs/dapi/auth/: auth.html
docs/dapi/db/: config.html  db.html
docs/dapi/jobs/: dir.html  index.html  jobs.html
docs/dsjobs/: jobs.html
docs/examples/: apps.md  database.md  mpm.md  openfoam.md  opensees.md  pylauncher.md  pylauncher_opensees.md  tms_credentials.md
docs/stylesheets/: extra.css
example-notebooks/mpm/: papermill-mpm.ipynb  template-mpm-run.ipynb
examples/: apps.ipynb  db.ipynb  files.ipynb  mpm-minimal.ipynb  mpm.ipynb  projects.ipynb  publications.ipynb  pylauncher_sweep.ipynb  systems.ipynb  tms_credentials.ipynb
examples/mpm/: mpm-minimal.ipynb  mpm.ipynb  papermill-mpm.ipynb  t3mpm.ipynb  template-mpm-run.ipynb  template-mpm-v3.ipynb
examples/mpm/uniaxial_stress/: results.ipynb  test_benchmark.py
examples/openfoam/: OpenFOAM_DAPI_example.ipynb  OpenFOAM_Run_example.ipynb  openfoam-minimal.ipynb  openfoam.ipynb
examples/openfoam/DH1_run/0/: U  boundary  k  nut  omega  p
examples/openfoam/DH1_run/constant/: transportProperties  (+1 more)
examples/opensees/: DS_GenFunctionsV3.py  N10_T3.tcl  OpenSeesMP-dapi.ipynb  OpenSeesMPJupyter-TAPISV3.ipynb  getFromDesignSafeTAPISV3.ipynb  interactiveplot.py  opensees-dapi-v3.ipynb  opensees.ipynb  plotAcc.py  plotPorepressure.py  plotProfile.py  plotStressStrain.py  respSpectra.py  velocity.input
examples/opensees/DS_input/: plotAcc.py  respSpectra.py
examples/pylauncher/: pylauncher_opensees.ipynb  pylauncher_sweep.ipynb
scripts/: pre-commit
tests/: test_job_gen_jobinfo.py
tests/auth/: test_auth.py
tests/db/: test_db.py
tests/files/: test_encoding_consistency.py  test_uri_translation.py
tests/jobs/: test_archive_config.py  test_dir_uri.py  test_job_gen_jobinfo.py  test_job_get_archive_path.py  test_job_runtime.py  test_job_status.py  test_list_jobs.py  test_parametric_sweep.py  test_runtime_summary.py
tests/projects/: test_projects.py
tests/publications/: test_publications.py
tests/systems/: test_credentials.py
(+6 files in other folders)
