[tool.poetry]
name = "dapi"
version = "1.0.0"
description = "DesignSafe API"
authors = [
    "Krishna Kumar <krishnak@utexas.edu>",
    "Pedro Arduino <parduino@uw.edu>",
    "Scott Brandenberg <sjbrandenberg@ucla.edu>",
]
readme = "README.md"
packages = [{include = "dapi"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
exceptiongroup = "^1.2.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.1"
numpy = "^2.1.1"
pandas = "^2.2.3"
tapipy = "^1.6.3"
jsonschema = ">=4.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = {extras = ["jupyter"], version = "^23.11.0"}
pdoc = "^14.1.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"