[project]
name = "dapi"
version = "0.4.9"
description = "DesignSafe API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Krishna Kumar", email = "krishnak@utexas.edu" },
    { name = "Pedro Arduino", email = "parduino@uw.edu" },
    { name = "Scott Brandenberg", email = "sjbrandenberg@ucla.edu" },
]
dependencies = [
    "numpy>=1.21.0,<2.0; python_version < '3.10'",
    "numpy>=1.21.0; python_version >= '3.10'",
    "pandas>=1.3.0,<3.0.0; python_version < '3.10'",
    "pandas>=2.1.0; python_version >= '3.10'",
    "sqlalchemy>=2.0.41",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
    "exceptiongroup>=1.3.0; python_version < '3.11'",
    "tapipy>=1.8.4",
    "jsonschema>=4.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black[jupyter]>=23.11.0",
    "ipykernel>=6.26.0",
]
docs = [
    "jupyter-book>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dapi"]
