[project]
name = "dapi"
version = "0.5.2"
description = "DesignSafe API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Krishna Kumar", email = "krishnak@utexas.edu" },
    { name = "Pedro Arduino", email = "parduino@uw.edu" },
    { name = "Scott Brandenberg", email = "sjbrandenberg@ucla.edu" },
]
dependencies = [
    "numpy>=1.21.0,<2.0; python_version < '3.10'",
    "numpy>=1.21.0; python_version >= '3.10'",
    "pandas>=1.3.0,<3.0.0; python_version < '3.10'",
    "pandas>=2.1.0; python_version >= '3.10'",
    "sqlalchemy>=2.0.41",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
    "exceptiongroup>=1.3.0; python_version < '3.11'",
    "tapipy>=1.8.4",
    "jsonschema>=4.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "ruff>=0.8.0",
    "ipykernel>=6.26.0",
]
docs = [
    "jupyter-book>=2.0.0",
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
    "furo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402"]

[tool.ruff.format]
docstring-code-format = true

[tool.hatch.build.targets.wheel]
packages = ["dapi"]
